# deepcode

./: .gitignore  LICENSE  README.md  pyproject.toml
deepcode_cli/: __init__.py  main.py
deepcode_cli/deepseek4free/dsk/: api.py  pow.py  run_and_get_cookies.py  server.py
deepcode_cli/src/: __init__.py  agent_tools.py  config_manager.py  session_store.py
